# LocalHire

./: .gitignore  COMPLETE_WORKFLOW_SETUP.md  COMPLETION_SETUP.md  CONFLICT_DETECTION_READY.md  DATE_TIME_ENFORCEMENT.md  IMPLEMENTATION_SUMMARY.md  JOB_OFFERS_SETUP.md  QUICKSTART.md  QUICKSTART_CONFLICTS.md  SCHEDULE_CONFLICT_IMPLEMENTATION.md  SCHEDULE_CONFLICT_SETUP.md  SCHEDULING_COMPLETION_GUIDE.md  SETUP_GUIDE.md
Backend/: index.js  package-lock.json  package.json  run-fixes.js  run-migration.js  seed.js
Backend/Controllers/: AdminController.js  AnalyticsController.js  EmployerController.js  SkillController.js  (+7 more)
agent-flow-visualizer/: tailwind.config.ts
agent_frontend/: App.tsx  README.md  README_APP.md  index.html  main.tsx  tailwind.config.js  vite.config.ts
app_backend/: index.js
frontend/: app.json  package-lock.json  package.json  tsconfig.json
sql_agent_backend/: README.md  main.py  pyproject.toml
sql_agent_backend/agents/notify_agent/: .env.example  listener.md  pyproject.toml
sql_agent_backend/agents/notify_agent/src/notify_agent/: crew.py  main.py
sql_agent_backend/agents/notify_agent/src/notify_agent/config/: agents.yaml  tasks.yaml
sql_agent_backend/agents/notify_agent/src/notify_agent/listeners/: custom.py
sql_agent_backend/agents/notify_agent/src/notify_agent/tools/: supabase_tools.py
voice_agent/: .env.example  .gitignore  README.md  pyproject.toml
voice_agent/src/voice/: crew.py  main.py
voice_agent/src/voice/config/: agents.yaml  tasks.yaml
voice_agent/src/voice/db/: config.py
voice_agent/src/voice/tools/: user_input.py
(+175 files in other folders)
