[project]
name = "voice"
version = "0.1.0"
description = "voice using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1",
    "deep-translator>=1.11.4",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "supabase>=2.27.2",
    "tavily-python>=0.7.19",
    "wavio>=0.0.9",
]

[project.scripts]
voice = "voice.main:run"
run_crew = "voice.main:run"
train = "voice.main:train"
replay = "voice.main:replay"
test = "voice.main:test"
run_with_trigger = "voice.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
